feat(post): add second post

--- a/_posts/2024-11-24-second.md
+++ b/_posts/2024-11-24-second.md
@@ -19,3 +19,314 @@ In this post, I’ll walk you through the process of creating a fully functional
 
 이 글에서는 무료 호스팅 플랫폼인 **GitHub Pages**와 가볍고 커스터마이즈 가능한 테마인 **Chirpy**를 사용하여 완전히 기능적인 블로그를 만드는 과정을 안내할 것입니다. 튜토리얼을 마치면 자신만의 블로그를 완성하여 세상과 아이디어를 공유할 준비를 마칠 수 있을 것입니다!
 -->
+
+
+# Prerequisites
+
+Please make sure you have a GitHub account ready.  
+If you don’t have one, create it [here](https://github.com/).
+
+I’ll be using **Visual Studio Code (VSC)** for this tutorial, so make sure to install it as well.  
+Download it [here](https://code.visualstudio.com/) if you haven’t already.
+
+<!-- 
+# 사전준비
+
+깃헙 계정은 미리 준비해주세요!!  
+없으신 분들은 [여기](https://github.com/)에서 만들어주세요.
+
+저는 **Visual Studio Code (VSC)**로 진행할 것이기 때문에 VSC도 설치해주세요.  
+[여기](https://code.visualstudio.com/)에서 설치할 수 있습니다.
+-->
+
+---
+
+# Step 1: Install Ruby
+
+To create your blog, we’ll be using **Jekyll (a static site generator)** and the **Chirpy theme**, which requires **Ruby** to function.  
+Refer to the [official Jekyll installation guide](https://jekyllrb.com/docs/installation/) and follow the steps to install Ruby on your system.
+
+<!-- 
+# 첫번째 ruby 설치
+
+블로그를 만들기 위해 우리는 **Jekyll(정적 사이트 생성기)**와 **Chirpy 테마**를 사용할 것입니다. 이를 위해 **Ruby**가 필수입니다.  
+[Jekyll 공식 설치 가이드](https://jekyllrb.com/docs/installation/)를 참고하여 Ruby를 설치해주세요.
+-->
+
+---
+
+# Step 2: Fork the Chirpy Theme
+
+1. Go to the [Chirpy repository](https://github.com/cotes2020/jekyll-theme-chirpy/).  
+
+2. Click the **Fork** button.  
+![2-1](/assets/img/posts/24.11/2-1.png)
+
+3. In the **Repository name** field, type `username.github.io`.  
+![2-2](/assets/img/posts/24.11/2-2.png)
+
+3.1 **How to Check Your Username**  
+Click on your profile icon in the top left of the GitHub page:  
+![2-3](/assets/img/posts/24.11/2-3.png){: .image-left}
+
+Then, confirm your username as displayed at the top:  
+![2-4](/assets/img/posts/24.11/2-4.png)
+
+4. Click the **Create Fork** button.
+
+<!-- 
+# 두번쨰 Chirpy Fork 하기
+
+1. [Chirpy Repository](https://github.com/cotes2020/jekyll-theme-chirpy/)로 들어가주세요.
+
+2. **Fork** 버튼을 클릭하세요.  
+![2-1](/assets/img/posts/24.11/2-1.png)
+
+3. **Repository name** 필드에 `username.github.io`를 입력하세요.  
+![2-2](/assets/img/posts/24.11/2-2.png)
+
+3.1 **username 확인법**  
+GitHub 페이지 상단 왼쪽의 프로필 아이콘을 클릭하세요.  
+![2-3](/assets/img/posts/24.11/2-3.png){: .image-left}
+
+그런 다음 화면 상단에 표시된 username을 확인하세요.  
+![2-4](/assets/img/posts/24.11/2-4.png)
+
+4. **Create Fork** 버튼을 클릭하세요.
+-->
+
+---
+
+## Step 3: Clone the Repository
+
+1. Copy the repository URL from the page as shown in the image below:  
+![2-5](/assets/img/posts/24.11/2-5.png)
+
+2. Open **Git Bash** and run the following command (replace the URL with your repository address):  
+
+```bash
+git clone git@github.com:yhkim/yhkim.github.io.git
+```
+
+- The above is an example; replace it with the URL copied from your repository.  
+- I used SSH, but you can choose HTTPS, SSH, or GitHub CLI—whichever you prefer.  
+- If you’re new to Git, refer to the [Git documentation](https://git-scm.com/doc) for a basic guide.
+
+<!-- 
+- 위는 예시이며 각자 리포지토리에서 복사한 주소를 넣으셔야 합니다.  
+- 저는 SSH로 했지만 HTTPS, SSH, GitHub CLI 중 아무거나 사용하시면 됩니다.  
+- Git에 대한 기초 지식이 없으신 분은 [여기](https://git-scm.com/doc)를 참고하세요.
+-->
+
+---
+
+## Step 4: Initialize Chirpy
+
+1. Open a terminal in the project’s root directory.  
+2. Run the following command to initialize Chirpy:
+
+```bash
+$ tools/init.sh
+[INFO] Initialization successful!  <-- If you see this message, it means the initialization was successful.
+```
+
+Since this is a forked repository, delete the example files provided with Chirpy to start fresh.
+
+---
+
+## Step 5: Enable Live Preview
+
+To preview your posts in real time, add **jekyll-livereload** to your project.
+
+1. Open the `Gemfile` in your project directory.  
+2. Add the following line:
+
+```bash
+gem "jekyll-livereload"
+```
+
+---
+
+## Step 6: Install Dependencies
+
+Run the following command in the terminal to install all the necessary dependencies for Jekyll:
+
+```bash
+$ bundle
+```
+
+---
+
+## Step 7: Run Jekyll Locally
+
+To start your local server and preview your blog in real time, use the following command:
+
+```bash
+bundle exec jekyll serve --livereload
+```
+
+If the command runs successfully, you should see the following output:
+
+```
+LiveReload address: http://127.0.0.1:35729
+    Server address: http://127.0.0.1:4000/
+  Server running... press ctrl-c to stop.
+        LiveReload: Browser connected
+```
+
+Now, open `http://127.0.0.1:4000/` in your browser to view your blog.
+
+---
+
+## Step 8: Push the Changes to GitHub
+
+Finally, let’s push the changes to GitHub. Once the changes are uploaded, you can check if your blog is live and working properly at the `username.github.io` URL you set up in **Step 2**.
+
+Run the following commands in your terminal:
+
+```bash
+git add .
+git commit -m 'first commit'
+git push
+```
+
+Execute these commands in order to upload your files to GitHub. Once the process is complete, your blog will be live!
+
+Here’s how it should look:
+
+![2-6](/assets/img/posts/24.11/2-6.png)
+
+
+# Conclusion
+
+Creating your own blog using **GitHub Pages** and **Chirpy** is not only straightforward but also an excellent way to establish your online presence without spending a dime. Whether you're documenting your journey, sharing knowledge, or showcasing your portfolio, this setup gives you the tools to make it happen.
+
+I hope this guide has been helpful in getting you started. If you have any questions or run into issues, feel free to leave a comment or reach out. Your blog is just the beginning—keep building, sharing, and growing!
+
+Thank you for reading, and happy blogging! 🚀
+
+<!-- 
+## 사전준비 
+
+깃헙 계정은 미리 준비해주세요!!
+없으신 분들은 여기 에서 만들어주세요. https://github.com/
+
+저는 Visual studio Code로 진행 할 것 이기 때문에 VSC도 설치해주세요.
+https://code.visualstudio.com/
+없으신 분들은 여기서 설치해주시면 됩니다.
+
+
+## 첫번째 ruby 설치
+
+저희는 jekyll(정적 사이트 생성기)와 chirpy 테마를 사용해서 만들것이기 때문에 **ruby가 필수**입니다
+- 참고 : https://jekyllrb.com/docs/installation/
+
+위 사이트의 가이드를 보고 설치해 주세요.
+
+## 두번쨰 Chirpy Fork 하기
+
+1. https://github.com/cotes2020/jekyll-theme-chirpy/ 여기 사이트로 들어가주세요
+
+2. Fork를 클릭해주세요
+![2-1](/assets/img/posts/24.11/2-1.png)
+
+3. Repository name에 username.github.io를 입력해주세요. 
+![2-2](/assets/img/posts/24.11/2-2.png)
+
+3-1. username 확인법
+
+![2-3](/assets/img/posts/24.11/2-3.png){: .image-left}
+
+깃헙 페이지 왼쪽 상단에 프로필 아이콘 클릭 후
+
+![2-4](/assets/img/posts/24.11/2-4.png)
+
+위에 나와있는 username을 확인 하시면 됩니다.
+
+4. Create fork 버튼을 눌러주세요.
+
+## 세번째 소스 클론 받기
+![2-5](/assets/img/posts/24.11/2-5.png)
+위 사진의 주소를 보고 git bash 에서 아래 명령을 통해 소스를 받습니다. 
+
+```bash
+git clone git@github.com:yhkim/yhkim.github.io.git
+```
+- 위는 예시이며 각자 repositoy에서 복사한 주소를 넣으셔야 합니다.
+- 저는 SSH로 했지만 HTTPS, SSH, GitHub CLI에 아무거나 사용하시면 됩니다.
+- git에 대한 기초 지식이 없으신 분은 우선 [여기](https://git-scm.com/doc)를 참고하세요~
+
+## 네번째 Chirpy 초기화 하기
+
+소스 홈에서 터미널을 여시고 아래 명령을 사용하여 chirpy를 초기화 해줍니다.
+
+```bash
+$ tools/init.sh
+[INFO] Initialization successful!  <-- 이런 메세지가 나오면 성공입니다.
+```
+
+fork로 받았기 때문에 chirpy 자체 개발을 위해 예시 파일들을 삭제 해줍니다.
+
+## 5번째 실시간 적용 시키기
+
+로컬 환경에서 열어서 포스트 작성할때 실시간으로 변경하는것을 보기 위한 작업입니다.
+
+Gemfile에 jekyll-livereload 추가
+프로젝트의 Gemfile에 다음을 추가하세요:
+
+```bash
+gem "jekyll-livereload"
+```
+
+## 6번째 의존성 설치하기
+
+```bash
+$ bundle
+```
+
+jekyll을 로컬에서 실행시키기 위해 터미널에서 위 명령어를 사용하여 의존성 모듈들을 모두 설치해주세요.
+
+## 7번째 로컬환경에서 실행하기
+
+```bash
+bundle exec jekyll serve --livereload
+```
+
+위 코드로 실행을 시켜주시면
+```
+LiveReload address: http://127.0.0.1:35729
+    Server address: http://127.0.0.1:4000/
+  Server running... press ctrl-c to stop.
+        LiveReload: Browser connected
+```
+위 코드가 나오면 성공입니다.
+
+자 이제 Server address: http://127.0.0.1:4000/ 로 들어가주시면 됩니다.
+
+## 8번째 소스 올리기
+
+자 이제 마지막으로 소스를 올리겠습니다. 
+소스를 올리면 로컬 환경이 아니라 아까 2번째에서 만든 username.github.io가 잘 적용이 됐는지 확인 하시면 됩니다.
+
+터미널에서
+
+```bash
+git add .
+git commit -m 'first commit'
+git push
+```
+위 코드를 순서대로 해주시면 이제 마무리가 됐습니다.
+
+![2-6](/assets/img/posts/24.11/2-6.png)
+
+
+자 이제 위에 처럼 페이지가 이렇게 나오면 성공 입니다!! 😂
+
+## 결론
+
+**GitHub Pages**와 **Chirpy**를 사용해 블로그를 만드는 것은 쉽고 무료로 온라인 포트폴리오를 구축할 수 있는 훌륭한 방법입니다. 여러분이 여정을 기록하거나 지식을 공유하거나 포트폴리오를 보여주고 싶다면, 이 설정은 이를 가능하게 하는 도구를 제공합니다.
+
+이 가이드가 시작하는 데 도움이 되었기를 바랍니다. 질문이 있거나 문제가 발생하면 언제든지 댓글을 남기거나 문의하세요. 여러분의 블로그는 시작일 뿐입니다. 계속해서 만들고, 공유하고, 성장하세요!
+
+읽어주셔서 감사합니다. 즐거운 블로깅 되세요! 🚀
+-->
