docs(blog): add 11-29-docker-bridge

--- a/_posts/2024-11-24-second.md
+++ b/_posts/2024-11-24-second.md
@@ -3,7 +3,7 @@ title: "Build Your Own Blog with GitHub Pages and Chirpy: A Step-by-Step Guide"
 date: 2024-11-24 10:00:00 +0900
 categories: [etc]
 tags: [blog, Github, Chirpy]
-image: /assets/img/posts/24.11/241124_2.png
+image: /assets/img/github.jpg
 ---
 
 # Build Your Own Blog with GitHub Pages and Chirpy
