docs(blog): add 12-01-generics

--- a/_posts/2024-12-01-generics.md
+++ b/_posts/2024-12-01-generics.md
@@ -2,7 +2,7 @@
 title: "What are Generics?"
 date: 2024-12-01 00:00:00 +0900
 categories: [Typescript]
-tags: [generics, Typescript, Javascript]
+tags: [generics, Typescript, Nestjs, Passport.js]
 image: 
 ---
 
